Catch up free site to paid one (#1)
* Add error handling to password

* Prepare free pages

* Add password error handling message

* updated players.csv to change WSH to WAS

* upadted settings.py local dev DB name for local dev testing, updated auth_views.py to match paid site

* updated AuthContext.js with new errors and auth function handling to match paid site

* updated Signup component to have password validation and new errors from AUthContext

* updated LoginForm component to use new errors from AuthContext

* updated forgotPasswordForm component to use new errors from AuthContext

* updated ConfirmSignupForm to use new errors from AuthContext

* updated ConfirmForgotPassword to have password validation, fixed spelling mistake in components name, updated to use new errors from AuthContext

* removed confirm signup route in App.js and replaced ScoringRulesDialog with updated data and tables instead of text based lists

* added UserProfile.js component for users avatar/profile button in NavBar

* added UserProfile component to authenticated part of NavBar component

* bolded text on Home page component, removed extra LogoutButton from NavBar

* bolded text in ProtectedHome component

* updated auth context errors, and restyled/organized free home page

* updated styling of ProtectedHome component

* removed uselesss comments

* updated home and protected home component main title size and max width to 75%

* Improve Signup. Update UI. (#53)

* added validation checks for users password in signup form, does not allow invalid passwords/password combinations to be submitted

* updated AuthContext to keep track of specific error state varialbes for each step in auth flow, updated ConfirmForgotPassword to have password and code validation in form. updated components to receieve specific errors for the auth component type

* updated ConfirmForgotPassword Django API View to return more specific errors for when an invalid 

--- a/.gitignore
+++ b/.gitignore
@@ -175,6 +175,8 @@ staticfiles/
 
 # misc
 .DS_Store
+**/.DS_Store
+
 .env.local
 .env.development.local
 .env.test.local
@@ -213,3 +215,4 @@ data/All_Players_Test.csv
 data/
 data/*
 src/components/auth/CheckAuthButton.jsx
+myenv/*
